--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,11 @@ disallow_untyped_decorators = true
 
 check_untyped_defs = true
 
+plugins = ["mypy_django_plugin.main"]
+
+[tool.django-stubs]
+django_settings_module = "kit_web_ui.settings"
+
 [tool.isort]
 atomic = true
 balanced_wrapping = true
@@ -27,6 +32,8 @@ known_first_party = "kit_web_ui"
 # hanging grid grouped indent style wrapping
 multi_line_output = 5
 include_trailing_comma = true
+
+extend_skip = "migrations"
 
 [build-system]
 requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
@@ -69,6 +76,7 @@ dev = [
     "build",
     "pytest",
     "pytest-cov",
+    "django-stubs[compatible-mypy]",
     "types-paho-mqtt",
 ]
 mqtt = ["paho-mqtt >=1.6,<2"]
