--- a/.github/workflows/test_build.yml
+++ b/.github/workflows/test_build.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools wheel build
-        python -m pip install --no-deps .[dev]
+        python -m pip install .[dev]
     - name: Lint
       run: |
         make lint
