Add mosquitto setup

--- a/mosquitto/mosquitto.conf
+++ b/mosquitto/mosquitto.conf
@@ -1,11 +1,11 @@
 allow_anonymous false
-password_file mosquitto_passwd
-acl_file mosquitto_acl.conf
+password_file /srv/kit-web-ui/mosquitto_passwd
+acl_file /srv/kit-web-ui/mosquitto_acl.conf
 
 listener 8883
-certfile /srv/kit-web-ui/cert.pem
-cafile /srv/kit-web-ui/chain.pem
-keyfile /srv/kit-web-ui/privkey.pem
+certfile /srv/kit-web-ui/certificates/cert.pem
+cafile /srv/kit-web-ui/certificates/chain.pem
+keyfile /srv/kit-web-ui/certificates/key.pem
 
 log_type error
 log_type warning
@@ -15,6 +15,6 @@ log_type subscribe
 
 listener 9002
 protocol websockets
-certfile /srv/kit-web-ui/cert.pem
-cafile /srv/kit-web-ui/chain.pem
-keyfile /srv/kit-web-ui/privkey.pem
+certfile /srv/kit-web-ui/certificates/cert.pem
+cafile /srv/kit-web-ui/certificates/chain.pem
+keyfile /srv/kit-web-ui/certificates/key.pem
