--- a/env.example
+++ b/env.example
@@ -4,5 +4,8 @@ DJANGO_SECRET_KEY=""
 DJANGO_DEBUG=true
 #DJANGO_ALLOWED_HOSTS='*'
 
+# A file of words to use in memorable passwords
+WORDLIST=""
+
 DJANGO_SETTINGS_MODULE=kit_web_ui.settings
 PYTHONPATH="$app_root"
