--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
     "name": "kit-web-ui",
     "scripts": {
-        "build:ui": "cd kit-ui && npm run build-django",
-        "run:server": ". ./dev_env && django-admin runserver",
+        "install": "cd kit-ui && npm install",
+        "build:ui": "cd kit-ui && npm run clean && npm run build-django",
+        "run:server": "django-admin runserver",
         "run:ui": "cd kit-ui && npm run watch-django",
-        "start": "npm-run-all  --parallel run:*"
+        "start": "npm-run-all --parallel run:*"
     },
     "devDependencies": {
       "npm-run-all": "^4.1.2"
