--- a/env.example
+++ b/env.example
@@ -10,3 +10,9 @@ WORDLIST=""
 DJANGO_SETTINGS_MODULE=kit_web_ui.settings
 PYTHONPATH="$app_root"
 USE_POSTGRES=false
+
+MQTT_BROKER_HOST="localhost"
+MQTT_BROKER_PORT=1883
+# MQTT_BROKER_USERNAME=""
+# MQTT_BROKER_PASSWORD=""
+MQTT_BROKER_USE_TLS="false"
