--- a/env.example
+++ b/env.example
@@ -10,6 +10,11 @@ WORDLIST=""
 DJANGO_SETTINGS_MODULE=kit_web_ui.settings
 PYTHONPATH="$app_root"
 USE_POSTGRES=false
+# POSTGRES_DB="postgres"
+# POSTGRES_USER="postgres"
+# POSTGRES_PASSWORD="postgres"
+# POSTGRES_HOST="localhost"
+# POSTGRES_PORT="5432"
 
 MQTT_BROKER_HOST="localhost"
 MQTT_BROKER_PORT=1883
